# spacemacsconf

./: .clang-format  .spacemacs  .zshrc  CMakeLists.txt  README.md  TODO.org  services.org  ssh_aes.tar.gz.enc
auto-completion-modifiedlayer/: packages.el
auto-completion-modifiedlayer/snippets/emacs-lisp-mode/: .yas-compiled-snippets.el
cpplayermodified/: funcs.el  packages.el
private/cpputil/: packages.el
private/cudamode/: packages.el
private/qt/: packages.el
private/snippets/: once  xmlcd
private/snippets/c++-mode/: .yas-compiled-snippets.el
private/snippets/c-mode/: .yas-compiled-snippets.el
private/snippets/cc-mode/: .yas-compiled-snippets.el  for  once
